[gd_scene load_steps=37 format=2]

[ext_resource path="res://Interfaces/Scripts/CharacterSelection.gd" type="Script" id=1]
[ext_resource path="res://Static/Resources/Sounds/Music/GiantLeaves.mp3" type="AudioStream" id=2]
[ext_resource path="res://Characters/Sprites/Random/Random_Portrait.png" type="Texture" id=3]
[ext_resource path="res://Static/Resources/Fonts/Resources/Medium_Font_Cursive.tres" type="DynamicFont" id=4]
[ext_resource path="res://Static/Resources/UIElements/Images/Ready_Checked.png" type="Texture" id=5]
[ext_resource path="res://Static/Resources/UIElements/Images/Ready_Unchecked.png" type="Texture" id=6]
[ext_resource path="res://Interfaces/Scripts/SelectionContainer.gd" type="Script" id=7]
[ext_resource path="res://Static/Resources/Fonts/Resources/Large_Font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Interfaces/Scripts/Roster.gd" type="Script" id=9]
[ext_resource path="res://Static/Resources/UIElements/Images/MapTemplate.png" type="Texture" id=10]
[ext_resource path="res://Static/Resources/Textures/Particles/Raindrop.png" type="Texture" id=11]
[ext_resource path="res://Static/Resources/UIElements/Scripts/RosterButton.gd" type="Script" id=12]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView3.png" type="Texture" id=13]
[ext_resource path="res://Levels/Resources/Level-Nature-Shrine.png" type="Texture" id=14]
[ext_resource path="res://Static/Resources/UIElements/Images/Ready_Disabled_Checked.png" type="Texture" id=15]
[ext_resource path="res://Static/Resources/UIElements/Images/Ready_Disabled_Unchecked.png" type="Texture" id=16]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior3.png" type="Texture" id=17]
[ext_resource path="res://Static/Resources/Sounds/Ambient/rain-on-roof-or-window-nature-sounds-8312.mp3" type="AudioStream" id=18]
[ext_resource path="res://Static/Resources/Sounds/Ambient/fireplace.mp3" type="AudioStream" id=19]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView1.png" type="Texture" id=20]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView6.png" type="Texture" id=21]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView4.png" type="Texture" id=22]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView5.png" type="Texture" id=23]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Exterior/WindowView2.png" type="Texture" id=24]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior5.png" type="Texture" id=25]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior7.png" type="Texture" id=26]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior6.png" type="Texture" id=27]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior4.png" type="Texture" id=28]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior2.png" type="Texture" id=29]
[ext_resource path="res://Static/Resources/Backgrounds/CharacterSelection/Interior/TowerInterior1.png" type="Texture" id=30]
[ext_resource path="res://Static/Resources/Fonts/Resources/Medium_Font.tres" type="DynamicFont" id=31]

[sub_resource type="AnimatedTexture" id=9]
frames = 7
frame_0/texture = ExtResource( 30 )
frame_1/texture = ExtResource( 29 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 17 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 28 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 25 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 27 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 26 )
frame_6/delay_sec = 0.0

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.25
emission_shape = 2
emission_box_extents = Vector3( 300, 1, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( -1, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 980, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.13
scale_curve = SubResource( 5 )
color = Color( 0.862745, 0.878431, 1, 1 )
hue_variation = 0.01
hue_variation_random = 0.5

[sub_resource type="AnimatedTexture" id=8]
frames = 6
frame_0/texture = ExtResource( 20 )
frame_1/texture = ExtResource( 24 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 13 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 22 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 23 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 21 )
frame_5/delay_sec = 0.0

[node name="CharacterSelection" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -481.0
margin_right = 279.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Player1"]
margin_right = 279.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 8 )
text = "Player 1"
align = 1

[node name="CharacterName" type="Label" parent="Player1"]
margin_top = 55.0
margin_right = 279.0
margin_bottom = 85.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "-"
align = 1

[node name="Portrait" type="Control" parent="Player1"]
show_behind_parent = true
margin_top = 95.0
margin_right = 279.0
margin_bottom = 415.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3

[node name="Ready" type="HBoxContainer" parent="Player1"]
margin_top = 425.0
margin_right = 279.0
margin_bottom = 481.0
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Player1/Ready"]
margin_left = 35.0
margin_top = 13.0
margin_right = 137.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "Ready?"

[node name="CheckBox" type="CheckBox" parent="Player1/Ready"]
margin_left = 187.0
margin_right = 243.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
custom_icons/checked_disabled = ExtResource( 15 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 16 )
custom_icons/unchecked = ExtResource( 6 )
disabled = true
enabled_focus_mode = 0
flat = true
align = 1

[node name="Player2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -279.0
margin_top = -481.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Player2"]
margin_right = 279.0
margin_bottom = 45.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 8 )
text = "Player 2"
align = 1

[node name="CharacterName" type="Label" parent="Player2"]
margin_top = 45.0
margin_right = 279.0
margin_bottom = 75.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "-"
align = 1

[node name="Portrait" type="Control" parent="Player2"]
show_behind_parent = true
margin_top = 75.0
margin_right = 279.0
margin_bottom = 425.0
size_flags_vertical = 3

[node name="Ready" type="HBoxContainer" parent="Player2"]
margin_top = 425.0
margin_right = 279.0
margin_bottom = 481.0
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Player2/Ready"]
margin_left = 35.0
margin_top = 13.0
margin_right = 137.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "Ready?"

[node name="CheckBox" type="CheckBox" parent="Player2/Ready"]
margin_left = 187.0
margin_right = 243.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
custom_icons/checked_disabled = ExtResource( 15 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 16 )
custom_icons/unchecked = ExtResource( 6 )
disabled = true
enabled_focus_mode = 0
flat = true
align = 1

[node name="Roster" type="GridContainer" parent="."]
margin_left = 520.0
margin_top = 108.0
margin_right = 756.0
margin_bottom = 284.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomCharacterButton" type="TextureButton" parent="Roster"]
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
expand = true
script = ExtResource( 12 )

[node name="Portrait" type="TextureRect" parent="Roster/RandomCharacterButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSelectionContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 960.0
margin_right = 1565.0
margin_bottom = 1080.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapNameLabel" type="Label" parent="MapSelectionContainer"]
margin_right = 605.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 8 )
text = "<Level name>"
align = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MapSelectionContainer"]
margin_top = 63.0
margin_right = 605.0
margin_bottom = 303.0
alignment = 1

[node name="PreviousMapButton" type="Button" parent="MapSelectionContainer/ButtonContainer"]
margin_right = 27.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 8 )
text = "<"

[node name="MapPreview" type="TextureRect" parent="MapSelectionContainer/ButtonContainer"]
margin_left = 31.0
margin_right = 571.0
margin_bottom = 240.0
rect_min_size = Vector2( 540, 240 )
texture = ExtResource( 14 )
expand = true

[node name="NextMapButton" type="Button" parent="MapSelectionContainer/ButtonContainer"]
margin_left = 575.0
margin_right = 605.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 8 )
text = ">"

[node name="MapPreviewContainer" type="Control" parent="."]
anchor_left = 0.40625
anchor_top = 0.9
anchor_right = 0.596875
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="MapPreviewContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -20.0
margin_right = 101.0
margin_bottom = 20.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Label" parent="TooltipContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -41.0
margin_right = 60.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 4 )
text = "<tooltip>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="."]
margin_right = 63.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 31 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -729.0
margin_top = 45.0
margin_right = -557.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -22.0
pitch_scale = 0.87

[node name="FireSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="RainEffect" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
position = Vector2( 191, -80 )
z_index = -1
amount = 1000
lifetime = 1.5
preprocess = 3.0
randomness = 0.72
visibility_rect = Rect2( 0, 0, 0, 200 )
process_material = SubResource( 7 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exterior" type="TextureRect" parent="RainEffect"]
show_behind_parent = true
margin_left = -187.0
margin_top = 90.0
margin_right = -83.0
margin_bottom = 414.0
texture = SubResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Player1/Ready/CheckBox" to="." method="_on_Player1_CheckBox_toggled"]
[connection signal="toggled" from="Player2/Ready/CheckBox" to="." method="_on_Player2_CheckBox_toggled"]
[connection signal="character_blur" from="Roster" to="TooltipContainer" method="_on_Roster_character_blur"]
[connection signal="character_focus" from="Roster" to="TooltipContainer" method="_on_Roster_character_focus"]
[connection signal="character_selected" from="Roster" to="TooltipContainer" method="_on_Roster_character_selected"]
[connection signal="mouse_entered" from="Roster/RandomCharacterButton" to="TooltipContainer" method="_on_RandomCharacterButton_mouse_entered"]
[connection signal="mouse_exited" from="Roster/RandomCharacterButton" to="TooltipContainer" method="_on_RandomCharacterButton_mouse_exited"]
[connection signal="pressed" from="Roster/RandomCharacterButton" to="." method="_on_RandomCharacterButton_pressed"]
[connection signal="pressed" from="MapSelectionContainer/ButtonContainer/PreviousMapButton" to="." method="_on_PreviousMapButton_pressed"]
[connection signal="pressed" from="MapSelectionContainer/ButtonContainer/NextMapButton" to="." method="_on_NextMapButton_pressed"]
[connection signal="character_selected" from="TooltipContainer" to="." method="_on_TooltipContainer_character_selected"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
